# boidkit

./: README.md  pyproject.toml
boidkit/hydraulic_muscle/: README.md  main.py  pyproject.toml  simulation.py
boidkit_simulation/: __main__.py
boidkit_simulation/hydraulic_muscle/: constants.py  driver.py  integrator.py  mesh.py  physics.py  render.py
