[project]
name = "boidkit"
version = "0.1.0"
description = "Simulation toolkit for various physical systems"
authors = [
    {name = "Jacob Valdez",email = "jacobfv123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "boidkit"
version = "0.1.0"
description = "Simulation toolkit for various physical systems"
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
readme = "README.md"
packages = [{include = "boidkit_simulation"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
tqdm = "^4.65.0"

[tool.poetry.scripts]
hydraulic-muscle = "boidkit_simulation.hydraulic_muscle.driver:main"
