[project]
name = "boidkit"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Valdez",email = "jacobfv123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
